load("@rules_pkg//:pkg.bzl", "pkg_zip")
load("//:tooling/bundle_js.bzl", "bundle_js")
load("@npm//local-web-server:index.bzl", "ws")

package(default_visibility = [":__subpackages__"])

filegroup(
    name = "static_resources",
    srcs = glob(["staticResources/*"]),
)

genrule(
    name = "index_html",
    srcs = ["//renderer/main:index.html"],
    outs = ["index.html"],
    cmd = "cp $< $@",
)

ws(
    name = "start",
    args = [
        "--directory",
        ".",
    ],
    data = [
        ":bundle_web",
        ":index_html",
        ":static_resources",
    ],
)

pkg_zip(
    name = "app",
    srcs = [
        ":bundle_web",
        ":index_html",
        ":static_resources",
    ],
)

bundle_js(
    name = "bundle_web",
    outs = [
        "0.renderer.js",
        "1.renderer.js",
        "2.renderer.js",
        "3.renderer.js",
        "renderer.js",
    ],
    config = "$(execpath //renderer/main:webpack.config.js)",
    data = [
        "//:package_info",
        "//apps/web/main",
        "//renderer/main",
        "//renderer/main:webpack.config.js",
        "@npm//css-loader",
        "@npm//style-loader",
        "@npm//url-loader",
    ],
    entries = ["./$(GENDIR)/apps/web/main/index.js"],
    target = "web",
    visibility = [":__subpackages__"],
)
