load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "main",
    package_name = "@common",
    deps = [":compile_ts"],
)

ts_project(
    name = "compile_ts",
    srcs = glob(["**/*.ts"]),
    declaration = True,
    source_map = True,
    tsc = "//:tsc",
    tsconfig = "//:tsconfig.json",
)
