load("@npm//mocha:index.bzl", "mocha_test")
load("//:tooling/ts_project.bzl", "ts_node_project")

ts_node_project(
    name = "compile_ts",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//common/main",
        "//electron/main",
        "//testing/ui-utilities",
        "@npm//@types/chai-as-promised",
        "@npm//@types/chai-subset",
        "@npm//@types/mocha",
        "@npm//chai",
        "@npm//chai-subset",
        "@npm//electron",
        "@npm//sinon-chai",
        "@npm//spectron",
        "@npm//ts-sinon",
    ],
)

mocha_test(
    name = "test",
    args = [package_name() + "/**/*.spec.js"],
    configuration_env_vars = ["PATH"],
    data = [
        ":compile_ts",
        "//:.mocharc.json",
        "//:package.json",
        "//electron:bundled_main",
        "//electron:bundled_preload",
        "//electron:bundled_renderer",
        "//electron:dist-resources",
        "@npm//chai-as-promised",
    ],
)
